--- a/planet/templates/site_base.html
+++ b/planet/templates/site_base.html
@@ -29,7 +29,7 @@
         <div id="header">
             <div class="logo">
                 <h1>
-                    <a href="{% url planet_index %}" title="{{ site.name }}">{{ site.name }}</a>
+                    <a href="{% url 'planet_index' %}" title="{{ site.name }}">{{ site.name }}</a>
                 </h1>
             </div>
             <div id="nav">
